amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/duplicate-fields-interface.api.federation.report
ModelId: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/duplicate-fields-interface.api.graphql
Profile: GraphQL
Conforms: false
Number of results: 1

Level: Violation

- Constraint: http://a.ml/vocabularies/amf/parser#duplicated-field
  Message: Cannot exist two or more fields with name 'name'
  Severity: Violation
  Target: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/duplicate-fields-interface.api.graphql#/declares/shape/HasName
  Property: http://www.w3.org/ns/shacl#property
  Range: [(13,0)-(16,1)]
  Location: 
